rs/macros/tests/ui/sails_type_fails_event_wrong_order.stderr
error: #[sails::event] must appear before #[sails::sails_type], not after; swap the attribute order to avoid a hash mismatch
 --> tests/ui/sails_type_fails_event_wrong_order.rs:4:1
  |
4 | / #[event]
5 | | pub enum MyEvents {
6 | |     Transfer { from: ActorId, amount: u128 },
7 | |     Approval(ActorId),
8 | | }
  | |_^
