rs/macros/tests/ui/sails_type_fails_event_wrong_order.rs
use sails_rs::prelude::*;

#[sails_type]
#[event]
pub enum MyEvents {
    Transfer { from: ActorId, amount: u128 },
    Approval(ActorId),
}

fn main() {}
